tests/machine/x/fs/query_sum_select.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:48:21Z
open System

let nums: int list = [1; 2; 3]
let result: obj list = [ for n in nums do if n > 1 then yield List.sum n ]
printfn "%A" result
